@@ -1,60 +1,68 @@
 package co.edu.unbosque.NominaEmpleadosAPI.service.implementations;
 
-import co.edu.unbosque.NominaEmpleadosAPI.dto.DependenciaDTO;
 import co.edu.unbosque.NominaEmpleadosAPI.dto.EPSDTO;
-import co.edu.unbosque.NominaEmpleadosAPI.entity.Dependencia;
 import co.edu.unbosque.NominaEmpleadosAPI.entity.EPS;
+import co.edu.unbosque.NominaEmpleadosAPI.exceptions.BadRequestException;
 import co.edu.unbosque.NominaEmpleadosAPI.repository.IEPSRepository;
-import co.edu.unbosque.NominaEmpleadosAPI.service.interfaces.IService;
+import jakarta.persistence.EntityNotFoundException;
+import jakarta.persistence.PersistenceException;
 import org.modelmapper.ModelMapper;
-import org.springframework.web.bind.annotation.RestController;
+import org.springframework.stereotype.Service;
 
 import java.util.List;
-import java.util.Optional;
+import java.util.stream.Collectors;
 
-@RestController
-public class EPSService implements IService<EPSDTO, Integer> {
+@Service
+public class EPSService {
 
-    private final IEPSRepository repository;
     private final ModelMapper modelMapper;
+    private final IEPSRepository epsRepository;
 
-    public EPSService(IEPSRepository repository, ModelMapper modelMapper) {
-        this.repository = repository;
+    public EPSService(ModelMapper modelMapper, IEPSRepository epsRepository) {
         this.modelMapper = modelMapper;
+        this.epsRepository = epsRepository;
     }
 
-
-    @Override
-    public void create(EPSDTO dto) {
-        var eps = modelMapper.map(dto, EPS.class);
-        repository.save(eps);
+    public EPSDTO crearEPS(EPSDTO epsDTO) {
+        try {
+            EPS eps = epsRepository.save(modelMapper.map(epsDTO, EPS.class));
+            return modelMapper.map(eps, EPSDTO.class);
+        } catch (PersistenceException e) {
+            throw new BadRequestException("No se pudo guardar los datos de la EPS, por favor verifique los datos.");
+        }
     }
 
-    @Override
-    public Optional<EPSDTO> read(Integer id) {
-        var epsDTO = repository.findById(id).get();
-        return Optional.of(modelMapper.map(epsDTO,EPSDTO.class));
+    public EPSDTO buscarEPSPorId(int id) {
+        return epsRepository.findById(id)
+                .map(eps -> modelMapper.map(eps, EPSDTO.class))
+                .orElseThrow(() -> new EntityNotFoundException("EPS no encontrada."));
     }
 
-    @Override
-    public void update(Integer id, EPSDTO dto) {
-        dto.setId(id);
-        var eps = modelMapper.map(dto, EPS.class);
-        repository.save(eps);
+    public EPSDTO actualizarEPS(int id, EPSDTO epsDTO) {
+        if (!epsRepository.existsById(id)) {
+            throw new EntityNotFoundException("EPS no encontrada para actualizar.");
+        }
+        epsDTO.setId(id);
+        EPS eps = modelMapper.map(epsDTO, EPS.class);
+        epsRepository.save(eps);
+        return modelMapper.map(eps, EPSDTO.class);
     }
 
-    @Override
-    public void delete(Integer id) {
-        repository.deleteById(id);
+    public void eliminarEPS(int id) {
+        if (!epsRepository.existsById(id)) {
+            throw new EntityNotFoundException("EPS no encontrada para eliminar.");
+        }
+        epsRepository.deleteById(id);
     }
 
-    @Override
-    public List<EPSDTO> readAll() {
-        var epsS = (List<EPS>) repository
-                .findAll();
-        return epsS
-                .stream()
-                .map((eps) -> modelMapper.map(epsS, EPSDTO.class))
-                .toList();
+    public List<EPSDTO> listarEPS() {
+        List<EPS> epsList = (List<EPS>) epsRepository.findAll();
+        List<EPSDTO> dtoList = epsList.stream()
+                .map(eps -> modelMapper.map(eps, EPSDTO.class))
+                .collect(Collectors.toList());
+        if (dtoList.isEmpty()) {
+            throw new EntityNotFoundException("No se encontraron registros de EPS.");
+        }
+        return dtoList;
     }
 }
